# DnaVisiCalc

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  OPTIMIZATION_REPORT.md  README.md  RUST_COREENGINE_OPTIMIZATION_SUGGESTIONS.md  TODO_NEXT_TEMP
coreengines/: catalog.json
crates/dnavisicalc-core/: Cargo.toml
crates/dnavisicalc-core-fml/: Cargo.toml
crates/dnavisicalc-core-fml/src/: address.rs  cell_grid.rs  deps.rs  engine.rs  eval.rs  lib.rs  parser.rs
crates/dnavisicalc-core-fml/src/experiments/: array_graph.rs  mod.rs
crates/dnavisicalc-core-fml/src/fec_f3e/: contracts.rs  f3e_engine.rs  fec_host.rs  mod.rs  spec.rs
crates/dnavisicalc-core-fml/tests/: conformance_invariants_stub.rs  dynamic_array_fuzz_prop.rs  engine_api_tests.rs  eval_tests.rs  fec_f3e_split_regression_tests.rs  iterative_calc_tests.rs  parser_fuzz_prop.rs
crates/dnavisicalc-core/src/: address.rs  ast.rs  cell_grid.rs  deps.rs  engine.rs  eval.rs  lib.rs  parser.rs
crates/dnavisicalc-core/src/experiments/: spill_overlay.rs  spill_rewrite.rs
crates/dnavisicalc-core/tests/: address_tests.rs  conformance_invariants_stub.rs  dynamic_array_fuzz_prop.rs  dynamic_array_strategy_parity.rs  dynamic_array_tests.rs  engine_api_tests.rs  engine_prop_tests.rs  engine_tests.rs  eval_error_tests.rs  eval_matrix_tests.rs  eval_tests.rs  incremental_recalc_tests.rs  iterative_calc_tests.rs  parser_fuzz_prop.rs  parser_tests.rs  structural_mutation_tests.rs  udf_tests.rs
crates/dnavisicalc-coreengine-rust-fml/: Cargo.toml
crates/dnavisicalc-engine/: Cargo.toml
crates/dnavisicalc-engine/src/: lib.rs
crates/dnavisicalc-engine/tests/: conformance_smoke.rs
crates/dnavisicalc-file/: Cargo.toml
crates/dnavisicalc-file/src/: lib.rs
crates/dnavisicalc-file/tests/: file_error_matrix.rs  roundtrip_prop.rs
crates/dnavisicalc-tui/: Cargo.toml
crates/dnavisicalc-tui/src/: app.rs  capture.rs  event_trace.rs  io.rs  keymap.rs  lib.rs  main.rs  render.rs  runtime.rs
crates/dnavisicalc-tui/tests/: action_fuzz_prop.rs  app_command_matrix.rs  app_matrix_tests.rs  broken_file_recovery.rs  command_fuzz_prop.rs  io_fs_tests.rs  keymap_matrix.rs  main_binary_smoke.rs  windows_terminal_repro_harness.rs
docs/: ARCHITECTURE.md  DYNAMIC_ARRAYS_DESIGN.md  ENGINE_API.md  ENGINE_CONFORMANCE_TESTS.md  ENGINE_DESIGN_NOTES.md  ENGINE_FEC_F3E_API_EXAMINATION_PLAN.md  ENGINE_FEC_F3E_FIRST_PASS.md  ENGINE_FORMAL_PROPERTIES.md  ENGINE_REQUIREMENTS.md  FILE_FORMAT.md  FOUNDATION_PROPOSALS.md  FOUNDATION_REQUIREMENTS_MAPPING.md  GAP_ANALYSIS.md  OPERATIONS.md  SPEC_v0.md  TUI_TESTABILITY.md  VISICALC_COMPATIBILITY_MATRIX.md  c-api-guidelines.md  engine-api.md  engine-requirements.md
docs/full-engine-spec/: ENGINE_API.md  ENGINE_CONFORMANCE_TESTS.md  ENGINE_REQUIREMENTS.md  ENGINE_REQUIREMENTS_INTEGRATION_APPENDIX.md  README.md  SPEC_v0.md  SPEC_v0_INTEGRATION_APPENDIX.md
docs/release/: GITHUB_RELEASE_v0.1.1.md  GITHUB_RELEASE_v0.1.2.md  GITHUB_RELEASE_v0.1.md  GITHUB_RELEASE_v0.2.0.md  HELP_QUICK_REFERENCE_v0.1.1.md  HELP_QUICK_REFERENCE_v0.1.2.md  HELP_QUICK_REFERENCE_v0.1.md  HELP_QUICK_REFERENCE_v0.2.0.md  WINDOWS_RUN_v0.1.1.md  WINDOWS_RUN_v0.1.2.md  WINDOWS_RUN_v0.1.md  WINDOWS_RUN_v0.2.0.md
docs/testing/: CONFORMANCE_PERFORMANCE_PLAN.md  COVERAGE_SUMMARY.md  ENGINE_BUILD_HARDENING.md  ENGINE_PERFORMANCE_PROFILES.md  OCAML_CORE_ENGINE_PERFORMANCE_AND_HARDENING.md  TESTING_PLAN.md  TESTING_ROUNDS.md  WINDOWS_TERMINAL_KEY_REPRO.md
engines/rust/coreengine-rust-fml/: Cargo.toml
notes/: DEPENDENCY_MONITORING.md  KEY_INPUT_DUPLICATION_REPRO_2026-02-24.md  LESSONS_2026-02-24.md  TERMINAL_DEBUGGING_LESSONS_2026-02-24.md
runs/: README.md
scripts/: new_engine_run.ps1
src/: engine.rs  eval.rs  lib.rs
tests/: eval_tests.rs
(+208 files in other folders)
