[workspace]
members = [
    "crates/dnavisicalc-core",
    "crates/dnavisicalc-coreengine-rust",
    "crates/dnavisicalc-engine",
    "crates/dnavisicalc-file",
    "crates/dnavisicalc-tui",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["DnaCalc contributors"]
repository = "https://github.com/DnaCalc/DnaVisiCalc"

[workspace.dependencies]
dnavisicalc-core = { path = "crates/dnavisicalc-core" }
dnavisicalc-engine = { path = "crates/dnavisicalc-engine" }
dnavisicalc-file = { path = "crates/dnavisicalc-file" }
anyhow = "1.0.100"
thiserror = "2.0.17"
ratatui = "0.29.0"
crossterm = "0.29.0"
arboard = "3.6.1"
tempfile = "3.23.0"
proptest = "1.9.0"
assert_cmd = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
