[package]
name = "dnavisicalc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "dnavisicalc_core"
path = "src/lib.rs"

[dependencies]
rustc-hash.workspace = true

[dev-dependencies]
proptest.workspace = true