[package]
name = "dnavisicalc-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "dnavisicalc_engine"
path = "src/lib.rs"

[dependencies]
dnavisicalc-core.workspace = true
libloading = "0.8.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
