[package]
name = "dnavisicalc-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "dnavisicalc_tui"
path = "src/lib.rs"

[[bin]]
name = "dnavisicalc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
dnavisicalc-core.workspace = true
dnavisicalc-file.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true